--- a/CloudVault/Base.lproj/Main.storyboard
+++ b/CloudVault/Base.lproj/Main.storyboard
@@ -687,9 +687,9 @@
                     <window key="window" title="CloudVault" separatorStyle="line" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-                        <rect key="contentRect" x="196" y="240" width="600" height="350"/>
+                        <rect key="contentRect" x="196" y="240" width="630" height="350"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1025"/>
-                        <value key="minSize" type="size" width="600" height="350"/>
+                        <value key="minSize" type="size" width="630" height="350"/>
                         <value key="maxSize" type="size" width="800" height="600"/>
                         <toolbar key="toolbar" implicitIdentifier="FC90A314-F82A-4D31-82A9-6DF52505DE9D" autosavesConfiguration="NO" allowsUserCustomization="NO" displayMode="iconOnly" sizeMode="regular" id="9Hd-Eo-CHT">
                             <allowedToolbarItems>
@@ -698,7 +698,7 @@
                                 <toolbarItem implicitItemIdentifier="7854DC6E-F74E-4EAA-82E7-688608BD3BBB" label="Add New Profile" paletteLabel="Add New Profile" image="person.crop.circle.badge.plus" catalog="system" sizingBehavior="auto" id="JU4-OS-v4b">
                                     <nil key="toolTip"/>
                                     <button key="view" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ESf-ki-he1">
-                                        <rect key="frame" x="31" y="14" width="30" height="31"/>
+                                        <rect key="frame" x="34" y="14" width="24" height="19"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="30" id="0gf-qM-xZf"/>
                                             <constraint firstAttribute="height" constant="30" id="NOW-KQ-c53"/>
@@ -714,9 +714,9 @@
                                 </toolbarItem>
                                 <toolbarItem implicitItemIdentifier="4CE3B134-C948-4251-968F-480DBD183278" label="Sort By" paletteLabel="Sort By" image="arrow.up.arrow.down" catalog="system" sizingBehavior="auto" id="uez-0r-GGg">
                                     <nil key="toolTip"/>
-                                    <button key="view" verticalHuggingPriority="750" id="NB2-L0-MFn">
-                                        <rect key="frame" x="8" y="14" width="30" height="31"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                    <button key="view" verticalHuggingPriority="750" misplaced="YES" id="NB2-L0-MFn">
+                                        <rect key="frame" x="9" y="14" width="28" height="19"/>
+                                        <autoresizingMask key="autoresizingMask"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="30" id="DPf-n7-9Iq"/>
                                             <constraint firstAttribute="height" constant="30" id="gJA-P6-S37"/>
@@ -733,9 +733,9 @@
                                 </toolbarItem>
                                 <toolbarItem implicitItemIdentifier="4E3BA0D4-9858-48FD-BB6C-7458CA688FCF" label="Lock Profiles" paletteLabel="Lock Profiles" image="lock" catalog="system" sizingBehavior="auto" id="shn-7f-Zu0">
                                     <nil key="toolTip"/>
-                                    <button key="view" verticalHuggingPriority="750" id="qn6-qg-va4">
-                                        <rect key="frame" x="23" y="14" width="30" height="31"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                    <button key="view" verticalHuggingPriority="750" misplaced="YES" id="qn6-qg-va4">
+                                        <rect key="frame" x="26" y="14" width="24" height="19"/>
+                                        <autoresizingMask key="autoresizingMask"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="30" id="Lm1-Uk-bb1"/>
                                             <constraint firstAttribute="height" constant="30" id="wtn-Ma-AAO"/>
@@ -766,12 +766,31 @@
                                         </searchFieldCell>
                                     </searchField>
                                 </toolbarItem>
+                                <toolbarItem implicitItemIdentifier="B451E931-48E2-4C42-B0E4-C6C48E845701" label="New Tag" paletteLabel="New Tag" image="tag.fill" catalog="system" sizingBehavior="auto" id="Ljr-gK-6jV">
+                                    <nil key="toolTip"/>
+                                    <button key="view" verticalHuggingPriority="750" misplaced="YES" id="uOA-UJ-Tfw">
+                                        <rect key="frame" x="13" y="14" width="27" height="19"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="3Q2-U8-gDx"/>
+                                            <constraint firstAttribute="width" constant="30" id="BI1-3Y-fN4"/>
+                                        </constraints>
+                                        <buttonCell key="cell" type="recessed" bezelStyle="recessed" image="tag.fill" catalog="system" imagePosition="only" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="bai-JW-Q7e">
+                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                            <font key="font" metaFont="systemBold" size="12"/>
+                                        </buttonCell>
+                                        <connections>
+                                            <action selector="openNewTagPopover:" target="B8D-0N-5wS" id="6DT-6H-o4I"/>
+                                        </connections>
+                                    </button>
+                                </toolbarItem>
                             </allowedToolbarItems>
                             <defaultToolbarItems>
                                 <toolbarItem reference="Ll6-aT-zJh"/>
                                 <toolbarItem reference="44f-Qn-ivy"/>
                                 <toolbarItem reference="shn-7f-Zu0"/>
                                 <toolbarItem reference="uez-0r-GGg"/>
+                                <toolbarItem reference="Ljr-gK-6jV"/>
                                 <toolbarItem reference="JU4-OS-v4b"/>
                             </defaultToolbarItems>
                         </toolbar>
@@ -936,6 +955,53 @@
                                                                 <outlet property="textField" destination="UaG-vx-bp8" id="s23-bl-MdD"/>
                                                             </connections>
                                                         </tableCellView>
+                                                        <tableCellView identifier="TagCell" id="mxh-IS-Q1c" customClass="TagTableCell" customModule="CloudVault" customModuleProvider="target">
+                                                            <rect key="frame" x="10" y="36" width="136" height="18"/>
+                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                                            <subviews>
+                                                                <stackView distribution="fill" orientation="horizontal" alignment="top" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WmK-eC-rgy">
+                                                                    <rect key="frame" x="3" y="0.0" width="130" height="18"/>
+                                                                    <subviews>
+                                                                        <customView translatesAutoresizingMaskIntoConstraints="NO" id="vO3-zd-yl3" customClass="TagIndicatorView" customModule="CloudVault" customModuleProvider="target">
+                                                                            <rect key="frame" x="0.0" y="0.0" width="18" height="18"/>
+                                                                            <constraints>
+                                                                                <constraint firstAttribute="width" constant="18" id="PHZ-mZ-9HV"/>
+                                                                                <constraint firstAttribute="height" constant="18" id="piT-EW-euo"/>
+                                                                            </constraints>
+                                                                        </customView>
+                                                                        <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="L1V-bJ-qpg">
+                                                                            <rect key="frame" x="24" y="2" width="108" height="15"/>
+                                                                            <textFieldCell key="cell" lineBreakMode="truncatingTail" truncatesLastVisibleLine="YES" sendsActionOnEndEditing="YES" title="Table View Cell" id="WT5-pT-evh">
+                                                                                <font key="font" metaFont="cellTitle"/>
+                                                                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                                                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                                                            </textFieldCell>
+                                                                        </textField>
+                                                                    </subviews>
+                                                                    <constraints>
+                                                                        <constraint firstItem="L1V-bJ-qpg" firstAttribute="centerY" secondItem="WmK-eC-rgy" secondAttribute="centerY" id="aLq-pL-EbI"/>
+                                                                        <constraint firstAttribute="trailing" secondItem="L1V-bJ-qpg" secondAttribute="trailing" id="gUZ-Gc-v93"/>
+                                                                    </constraints>
+                                                                    <visibilityPriorities>
+                                                                        <integer value="1000"/>
+                                                                        <integer value="1000"/>
+                                                                    </visibilityPriorities>
+                                                                    <customSpacing>
+                                                                        <real value="3.4028234663852886e+38"/>
+                                                                        <real value="3.4028234663852886e+38"/>
+                                                                    </customSpacing>
+                                                                </stackView>
+                                                            </subviews>
+                                                            <constraints>
+                                                                <constraint firstAttribute="trailing" secondItem="WmK-eC-rgy" secondAttribute="trailing" constant="3" id="6b4-cU-L7C"/>
+                                                                <constraint firstItem="WmK-eC-rgy" firstAttribute="centerY" secondItem="mxh-IS-Q1c" secondAttribute="centerY" id="B6t-F2-59T"/>
+                                                                <constraint firstItem="WmK-eC-rgy" firstAttribute="leading" secondItem="mxh-IS-Q1c" secondAttribute="leading" constant="3" id="J2s-et-9IF"/>
+                                                            </constraints>
+                                                            <connections>
+                                                                <outlet property="customView" destination="vO3-zd-yl3" id="i2o-Gs-BrP"/>
+                                                                <outlet property="textField" destination="L1V-bJ-qpg" id="cTI-0Y-tk6"/>
+                                                            </connections>
+                                                        </tableCellView>
                                                     </prototypeCellViews>
                                                 </tableColumn>
                                             </tableColumns>
@@ -965,7 +1031,7 @@
                 </viewController>
                 <customObject id="Fw8-Jz-VI8" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-372.5" y="737"/>
+            <point key="canvasLocation" x="-374" y="737"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="F0r-CD-0K9">
@@ -1138,6 +1204,56 @@
             </objects>
             <point key="canvasLocation" x="855" y="1129"/>
         </scene>
+        <!--New Tag Controller-->
+        <scene sceneID="5ic-ko-jEI">
+            <objects>
+                <viewController storyboardIdentifier="newTagController" id="9rE-pz-tMw" customClass="NewTagController" customModule="CloudVault" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" id="N80-pV-aK6">
+                        <rect key="frame" x="0.0" y="0.0" width="276" height="50"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="GkC-v6-yzf">
+                                <rect key="frame" x="12" y="12" width="226" height="26"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="26" id="tlS-CQ-pYW"/>
+                                </constraints>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="New Tag Name" bezelStyle="round" id="KBW-xJ-kqa">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <customView translatesAutoresizingMaskIntoConstraints="NO" id="LC7-Z9-ckM" customClass="ColorIndicatorButton" customModule="CloudVault" customModuleProvider="target">
+                                <rect key="frame" x="250" y="18" width="14" height="14"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="14" id="9oC-zd-aph"/>
+                                    <constraint firstAttribute="height" constant="14" id="suD-Wc-hAY"/>
+                                </constraints>
+                                <gestureRecognizers>
+                                    <clickGestureRecognizer delaysPrimaryMouseButtonEvents="YES" numberOfClicksRequired="1" id="A6U-NJ-yLH">
+                                        <connections>
+                                            <action selector="displayColorPanel:" target="9rE-pz-tMw" id="mrY-4B-jxf"/>
+                                        </connections>
+                                    </clickGestureRecognizer>
+                                </gestureRecognizers>
+                            </customView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="GkC-v6-yzf" firstAttribute="centerY" secondItem="N80-pV-aK6" secondAttribute="centerY" id="19o-M4-Spf"/>
+                            <constraint firstItem="GkC-v6-yzf" firstAttribute="leading" secondItem="N80-pV-aK6" secondAttribute="leading" constant="12" id="28v-Jb-bfC"/>
+                            <constraint firstAttribute="trailing" secondItem="LC7-Z9-ckM" secondAttribute="trailing" constant="12" id="8pg-D1-qa3"/>
+                            <constraint firstItem="LC7-Z9-ckM" firstAttribute="centerY" secondItem="N80-pV-aK6" secondAttribute="centerY" id="CIT-6h-Ile"/>
+                            <constraint firstItem="LC7-Z9-ckM" firstAttribute="leading" secondItem="GkC-v6-yzf" secondAttribute="trailing" constant="12" id="OTJ-9A-TKU"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="indicator" destination="LC7-Z9-ckM" id="Hnd-Cf-dgN"/>
+                    </connections>
+                </viewController>
+                <customObject id="TUm-VL-BHI" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1159" y="1048"/>
+        </scene>
         <!--Profile View Controller-->
         <scene sceneID="Nk1-dO-DEQ">
             <objects>
@@ -1181,7 +1297,7 @@
                                     <rect key="frame" x="0.0" y="284" width="520" height="16"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
-                                <scroller key="verticalScroller" wantsLayer="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="Xtw-if-bxX">
+                                <scroller key="verticalScroller" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="Xtw-if-bxX">
                                     <rect key="frame" x="504" y="0.0" width="16" height="300"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
@@ -1393,5 +1509,6 @@
         <image name="lock" catalog="system" width="14" height="15"/>
         <image name="person.crop.circle.badge.plus" catalog="system" width="17" height="16"/>
         <image name="person.crop.square.fill" catalog="system" width="15" height="14"/>
+        <image name="tag.fill" catalog="system" width="17" height="17"/>
     </resources>
 </document>
