--- a/CloudVault/Base.lproj/Main.storyboard
+++ b/CloudVault/Base.lproj/Main.storyboard
@@ -1224,8 +1224,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="276" height="50"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
+                            <textField focusRingType="none" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="GkC-v6-yzf">
+                                <rect key="frame" x="10" y="16" width="157" height="18"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="18" id="tlS-CQ-pYW"/>
+                                </constraints>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" focusRingType="none" placeholderString="New Tag Name" id="KBW-xJ-kqa">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="RFz-3C-vKy">
+                                <rect key="frame" x="196" y="8" width="75" height="32"/>
+                                <buttonCell key="cell" type="push" title="Create" bezelStyle="rounded" alignment="center" lineBreakMode="truncatingTail" enabled="NO" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="5yV-hu-BDa">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="createTag:" target="9rE-pz-tMw" id="vhm-hu-4wq"/>
+                                </connections>
+                            </button>
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="LC7-Z9-ckM" customClass="ColorIndicatorButton" customModule="CloudVault" customModuleProvider="target">
-                                <rect key="frame" x="250" y="18" width="14" height="14"/>
+                                <rect key="frame" x="177" y="18" width="14" height="14"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="14" id="9oC-zd-aph"/>
                                     <constraint firstAttribute="height" constant="14" id="suD-Wc-hAY"/>
@@ -1238,28 +1259,21 @@
                                     </clickGestureRecognizer>
                                 </gestureRecognizers>
                             </customView>
-                            <textField focusRingType="none" verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GkC-v6-yzf">
-                                <rect key="frame" x="12" y="16" width="232" height="18"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="18" id="tlS-CQ-pYW"/>
-                                </constraints>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" focusRingType="none" placeholderString="New Tag Name" id="KBW-xJ-kqa">
-                                    <font key="font" metaFont="system"/>
-                                    <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                            </textField>
                         </subviews>
                         <constraints>
                             <constraint firstItem="GkC-v6-yzf" firstAttribute="centerY" secondItem="N80-pV-aK6" secondAttribute="centerY" id="19o-M4-Spf"/>
                             <constraint firstItem="GkC-v6-yzf" firstAttribute="leading" secondItem="N80-pV-aK6" secondAttribute="leading" constant="12" id="28v-Jb-bfC"/>
-                            <constraint firstAttribute="trailing" secondItem="LC7-Z9-ckM" secondAttribute="trailing" constant="12" id="8pg-D1-qa3"/>
+                            <constraint firstItem="RFz-3C-vKy" firstAttribute="centerY" secondItem="N80-pV-aK6" secondAttribute="centerY" id="7xV-5u-fol"/>
                             <constraint firstItem="LC7-Z9-ckM" firstAttribute="centerY" secondItem="N80-pV-aK6" secondAttribute="centerY" id="CIT-6h-Ile"/>
                             <constraint firstItem="LC7-Z9-ckM" firstAttribute="leading" secondItem="GkC-v6-yzf" secondAttribute="trailing" constant="12" id="OTJ-9A-TKU"/>
+                            <constraint firstAttribute="trailing" secondItem="RFz-3C-vKy" secondAttribute="trailing" constant="12" id="reZ-ji-vmi"/>
+                            <constraint firstItem="RFz-3C-vKy" firstAttribute="leading" secondItem="LC7-Z9-ckM" secondAttribute="trailing" constant="12" id="uXb-Co-tuZ"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="createButton" destination="RFz-3C-vKy" id="Lmt-ST-Ib2"/>
                         <outlet property="indicator" destination="LC7-Z9-ckM" id="Hnd-Cf-dgN"/>
+                        <outlet property="textField" destination="GkC-v6-yzf" id="1UD-ro-EQN"/>
                     </connections>
                 </viewController>
                 <customObject id="TUm-VL-BHI" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
@@ -1355,10 +1369,10 @@
                                             </textFieldCell>
                                         </textField>
                                         <stackView orientation="horizontal" alignment="centerY" spacing="10" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cIF-jE-33l">
-                                            <rect key="frame" x="10" y="10" width="484" height="14"/>
+                                            <rect key="frame" x="10" y="10" width="484" height="16"/>
                                             <beginningViews>
                                                 <stackView orientation="horizontal" alignment="centerY" spacing="4" horizontalStackHuggingPriority="252" verticalStackHuggingPriority="249.99998474121094" misplaced="YES" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4L9-Zx-CHg">
-                                                    <rect key="frame" x="0.0" y="0.0" width="71" height="14"/>
+                                                    <rect key="frame" x="0.0" y="1" width="71" height="14"/>
                                                     <beginningViews>
                                                         <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="F2h-iy-Xmc">
                                                             <rect key="frame" x="0.0" y="0.5" width="15" height="14"/>
@@ -1390,7 +1404,7 @@
                                                     </customSpacing>
                                                 </stackView>
                                                 <stackView orientation="horizontal" alignment="centerY" spacing="4" horizontalStackHuggingPriority="252" verticalStackHuggingPriority="249.99998474121094" misplaced="YES" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fYR-e4-RX0">
-                                                    <rect key="frame" x="81" y="0.0" width="76" height="14"/>
+                                                    <rect key="frame" x="81" y="1" width="76" height="14"/>
                                                     <beginningViews>
                                                         <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="htc-by-2GN">
                                                             <rect key="frame" x="0.0" y="0.5" width="16.5" height="15"/>
@@ -1421,20 +1435,20 @@
                                                         <real value="3.4028234663852886e+38"/>
                                                     </customSpacing>
                                                 </stackView>
-                                                <stackView orientation="horizontal" alignment="centerY" spacing="4" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" ambiguous="YES" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wSo-fS-3Kk">
-                                                    <rect key="frame" x="167" y="0.0" width="317" height="14"/>
+                                                <stackView orientation="horizontal" alignment="centerY" spacing="4" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" ambiguous="YES" misplaced="YES" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wSo-fS-3Kk">
+                                                    <rect key="frame" x="167" y="1" width="317" height="14"/>
                                                     <beginningViews>
                                                         <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cgO-fH-wTM">
-                                                            <rect key="frame" x="0.0" y="-1.5" width="12.5" height="18"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="15" height="15"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="height" constant="10" id="NTA-iT-v0Z"/>
-                                                                <constraint firstAttribute="width" constant="10" id="sET-77-QmD"/>
+                                                                <constraint firstAttribute="height" constant="12" id="NTA-iT-v0Z"/>
+                                                                <constraint firstAttribute="width" constant="12" id="sET-77-QmD"/>
                                                             </constraints>
-                                                            <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="key.fill" catalog="system" id="DBO-NM-WEV"/>
+                                                            <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="clock.fill" catalog="system" id="DBO-NM-WEV"/>
                                                         </imageView>
-                                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dNu-6Q-iPu">
-                                                            <rect key="frame" x="14" y="0.0" width="57" height="14"/>
-                                                            <textFieldCell key="cell" controlSize="small" lineBreakMode="truncatingTail" truncatesLastVisibleLine="YES" title="secretKey" usesSingleLineMode="YES" id="dBy-bj-kDM">
+                                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dNu-6Q-iPu" userLabel="Date Added Label">
+                                                            <rect key="frame" x="17" y="0.0" width="62" height="14"/>
+                                                            <textFieldCell key="cell" controlSize="small" lineBreakMode="truncatingTail" truncatesLastVisibleLine="YES" title="dateAdded" usesSingleLineMode="YES" id="dBy-bj-kDM">
                                                                 <font key="font" metaFont="smallSystem"/>
                                                                 <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                                                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -1502,9 +1516,9 @@
                     <connections>
                         <outlet property="accessKeyLabel" destination="bJr-lk-5S3" id="gyM-lz-f3c"/>
                         <outlet property="accountIdLabel" destination="X50-HW-lU5" id="Zdo-R3-hnQ"/>
+                        <outlet property="dateAddedLabel" destination="dNu-6Q-iPu" id="Nau-0g-GmD"/>
                         <outlet property="indicatorView" destination="pAP-ru-1eE" id="TwI-re-co8"/>
                         <outlet property="profileNameLabel" destination="4aS-4Q-euT" id="edo-5f-Xl3"/>
-                        <outlet property="secretKeyLabel" destination="dNu-6Q-iPu" id="BQU-ZV-asV"/>
                     </connections>
                 </viewController>
                 <customObject id="MEJ-qh-7aH" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
@@ -1515,9 +1529,9 @@
     <resources>
         <image name="NSSmartBadgeTemplate" width="14" height="14"/>
         <image name="arrow.up.arrow.down" catalog="system" width="18" height="15"/>
+        <image name="clock.fill" catalog="system" width="15" height="15"/>
         <image name="cog-solid" width="512" height="512"/>
         <image name="grid" catalog="system" width="16" height="15"/>
-        <image name="key.fill" catalog="system" width="12" height="18"/>
         <image name="lock" catalog="system" width="14" height="15"/>
         <image name="person.crop.circle.badge.plus" catalog="system" width="17" height="16"/>
         <image name="person.crop.square.fill" catalog="system" width="15" height="14"/>
